[package]
name = "recursive_array"
version = "0.1.3"
edition = "2021"
authors = ["Roee Shoshani"]
description = "an implementation of arrays using recrusive data structures to avoid limitations of the rust compiler"
repository = "https://github.com/roeeshoshani/recursive_array"
license = "MIT"
keywords = ["recursive", "array"]
categories = ["data-structures", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
